--- a/respons.html
+++ b/respons.html
@@ -9,35 +9,29 @@
 </head>
 <body class="bg-white">
   <!-- nav section -->
-  <section class="flex flex-col sm:flex-row justify-between items-center px-4 sm:px-6 py-4 sm:py-6 bg-white shadow-md">
-    
-    <!-- logo + title -->
-    <div class="flex items-center gap-3">
-      <img class="w-14 sm:w-20" src="./assets/logo.png" alt="Logo">
-      <h1 class="text-green-800 text-xl sm:text-3xl font-bold leading-tight">
-        Emergency <br class="hidden sm:block"> Service
-      </h1>
+ <div class="max-w-sm mx-auto bg-white border-2 border-red-500 rounded-xl shadow-lg p-4 text-center">
+  <!-- Icon -->
+  <div class="flex justify-center mb-2">
+    <div class="bg-red-500 text-yellow-300 p-3 rounded-full">
+      <!-- Siren icon (Font Awesome or SVG) -->
+      <i class="fa-solid fa-light-emergency fa-shake text-2xl"></i>
     </div>
+  </div>
 
-    <!-- buttons -->
-    <div class="flex flex-wrap justify-center sm:justify-end gap-2 sm:gap-4 mt-4 sm:mt-0">
-      <!-- Heart -->
-      <button class="flex items-center gap-2 bg-green-100 px-4 py-2 rounded-3xl font-bold text-sm sm:text-base">
-        <span>0</span>
-        <img src="./assets/heart.png" alt="Heart" class="h-5 w-5">
-      </button>
+  <!-- Title and Number -->
+  <h2 class="text-lg font-bold text-red-600">National Emergency Number</h2>
+  <p class="text-sm text-gray-600 mt-1">National Emergency</p>
+  <h1 class="text-3xl font-bold text-black mt-2">999</h1>
 
-      <!-- Coins -->
-      <button class="flex items-center gap-2 bg-green-100 px-4 py-2 rounded-3xl font-bold text-sm sm:text-base">
-        <span>100</span>
-        <img src="./assets/coin.png" alt="Coin" class="h-5 w-5">
-      </button>
+  <!-- Status Button -->
+  <button class="mt-3 bg-gray-200 text-gray-700 px-4 py-1 rounded-full text-sm hover:bg-gray-300">All</button>
 
-      <!-- Copy -->
-      <button class="flex items-center gap-2 bg-green-600 text-white px-4 py-2 rounded-3xl font-bold text-sm sm:text-base">
-        <span>0</span> Copy
-      </button>
-    </div>
-  </section>
+  <!-- Action Buttons -->
+  <div class="flex justify-between mt-4">
+    <button class="bg-gray-100 text-gray-700 px-4 py-2 rounded hover:bg-gray-200">Copy</button>
+    <button class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600">Call</button>
+  </div>
+</div>
+
 </body>
 </html>
